--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz@0,6..12;1,6..12&family=Sansita+Swashed:wght@900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz@0,6..12;1,6..12&family=Sansita+Swashed:wght@900&display=swap");
 *,
 ::after,
 ::before {
@@ -54,7 +54,7 @@
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   /* typography */
   --defaultFontSize: 87.5%;
-  --headingFont: "Sansita Swashed", system-ui;
+  --headingFont: system-ui;
   --bodyFont:"Nunito Sans", sans-serif
   --smallText: 0.8em;
   --extraSmallText: 0.7em;
