--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz@0,6..12;1,6..12&family=Sansita+Swashed:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wdth,YTLC@0,6..12,75..125,440..540;1,6..12,75..125,440..540&family=Sansita+Swashed:wght@900&display=swa");
 *,
 ::after,
 ::before {
@@ -54,8 +54,10 @@
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   /* typography */
   --defaultFontSize: 87.5%;
-  --headingFont: system-ui;
-  --bodyFont:"Nunito Sans", sans-serif
+
+  --headingFont: "Sansita Swashed", system-ui;
+  --bodyFont:"Nunito Sans", sans-serif;
+
   --smallText: 0.8em;
   --extraSmallText: 0.7em;
   /* rest */
@@ -105,7 +107,7 @@ h5 {
   font-family: var(--headingFont);
   font-weight: 900;
   line-height: 1.3;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   letter-spacing: var(--letterSpacing);
 }
 
