--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,21 +7,23 @@
 
 :root {
   /* COLORS  */
+
   /* primary */
-  --primary-0: #f0efff;
-  --primary-50: #d8d6ff;
-  --primary-100: #c1beff;
-  --primary-200: #aaa5ff;
-  --primary-300: #938dff;
-  --primary-400: #7b74ff;
+--primary-0: #FFE8D6;   
+--primary-50: #FFD3B2;  
+--primary-100: #FFBD8E;
+--primary-200: #FFA869; 
+--primary-300: #FF9333; 
+--primary-400: #E57C30;
   /* main */
-  --primary-500: #645cff;
-  --primary-600: #554ed9;
-  --primary-700: #4640b3;
-  --primary-800: #37338c;
-  --primary-900: #282566;
-  --primary-1000: #191740;
-  --primary-1100: #0a0919;
+--primary-500: #CC662D;
+--primary-600: #B3502A;
+--primary-700: #993B27;
+--primary-800: #802725; 
+--primary-900: #661C1E;
+--primary-1000: #4D1317; 
+--primary-1100: #340A0E;
+
   /* grey */
   --grey-0: #fafbfc;
   --grey-50: #f2f4f8;
@@ -203,7 +205,7 @@ button,
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
   padding: 0.375rem 0.75rem;
-  box-shadow: var(--shadow-1);
+  /* box-shadow: var(--shadow-1); */
   transition: var(--transition);
   text-transform: capitalize;
 }
@@ -211,7 +213,7 @@ button:hover,
 .btn:hover {
   color: var(--white);
   background: var(--primary-700);
-  box-shadow: var(--shadow-2);
+  box-shadow: var(--shadow-1);
 }
 button.small {
   padding: 0.25rem 0.5rem;
