--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,20 +9,20 @@
   /* COLORS  */
 
   /* primary */
---primary-0: #FFE8D6;   
---primary-50: #FFD3B2;  
---primary-100: #FFBD8E;
---primary-200: #FFA869; 
---primary-300: #FF9333; 
---primary-400: #E57C30;
+  --primary-0: #f0efff;
+  --primary-50: #d8d6ff;
+  --primary-100: #c1beff;
+  --primary-200: #aaa5ff;
+  --primary-300: #938dff;
+  --primary-400: #7b74ff;
   /* main */
---primary-500: #CC662D;
---primary-600: #B3502A;
---primary-700: #993B27;
---primary-800: #802725; 
---primary-900: #661C1E;
---primary-1000: #4D1317; 
---primary-1100: #340A0E;
+  --primary-500: #645cff;
+  --primary-600: #554ed9;
+  --primary-700: #4640b3;
+  --primary-800: #37338c;
+  --primary-900: #282566;
+  --primary-1000: #191740;
+  --primary-1100: #0a0919;
 
   /* grey */
   --grey-0: #fafbfc;
