--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -362,7 +362,8 @@ form > *:last-child {
   margin-bottom: -9px;
 }
 .nav-btn {
-  padding: 0.15rem 0.75rem;
+   padding: 0.5rem 1rem;
+     display: inline-flex;
 }
 .nav-btn svg {
   font-size: 1.5rem;
