--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -200,7 +200,7 @@ button,
   cursor: pointer;
   appearance: none;
   color: var(--white);
-  background: var(--primary-500);
+  /* background: var(--primary-500); */
   border: none;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
@@ -209,25 +209,30 @@ button,
   transition: var(--transition);
   text-transform: capitalize;
 }
+
 button:hover,
 .btn:hover {
   color: var(--white);
-  background: var(--primary-700);
+  background: var(--primary-200);
   box-shadow: var(--shadow-1);
 }
+
 button.small {
   padding: 0.25rem 0.5rem;
   font-size: var(--smallText);
 }
+
 button.hipster {
   color: var(--primary-500);
   background: var(--primary-50);
   box-shadow: var(--shadow-1);
 }
+
 button.hipster:hover {
   background: var(--primary-100);
   box-shadow: var(--shadow-2);
 }
+
 button.block {
   width: 100%;
 }
@@ -363,7 +368,7 @@ form > *:last-child {
 }
 .nav-btn {
    padding: 0.5rem 1rem;
-     display: inline-flex;
+   display: inline-flex;
 }
 .nav-btn svg {
   font-size: 1.5rem;
