--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,20 +9,20 @@
   /* COLORS  */
 
   /* primary */
-  --primary-0: #f0efff;
-  --primary-50: #d8d6ff;
-  --primary-100: #c1beff;
-  --primary-200: #aaa5ff;
-  --primary-300: #938dff;
-  --primary-400: #7b74ff;
+--primary-0: #fff0f0;   /* Lightest red */
+--primary-50: #ffd6d6;  /* Very light red */
+--primary-100: #ffbebe;  /* Soft red */
+--primary-200: #ffa5a5;  /* Medium light red */
+--primary-300: #ff8d8d;  /* Bright medium red */
+--primary-400: #ff7474;  /* Vivid red */
   /* main */
-  --primary-500: #645cff;
-  --primary-600: #554ed9;
-  --primary-700: #4640b3;
-  --primary-800: #37338c;
-  --primary-900: #282566;
-  --primary-1000: #191740;
-  --primary-1100: #0a0919;
+--primary-500: #ff5c5c;  /* Main red */
+--primary-600: #d95454;  /* Slightly darker red */
+--primary-700: #b34646;  /* Dark red */
+--primary-800: #8c3737;  /* Deeper red */
+--primary-900: #662828;  /* Very dark red */
+--primary-1000: #401919; /* Near-black red */
+--primary-1100: #190a0a; /* Darkest red */
 
   /* grey */
   --grey-0: #fafbfc;
