--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -109,7 +109,6 @@ h5 {
   font-family: var(--headingFont);
   font-weight: 900;
   line-height: 1.3;
-  /* text-transform: capitalize; */
   letter-spacing: var(--letterSpacing);
 }
 
@@ -155,7 +154,7 @@ a {
   width: 100%;
   background: var(--white);
   border-radius: var(--borderRadius);
-  box-shadow: var(--shadow-2);
+  box-shadow: var(--shadow-1);
   padding: 2rem 2.5rem;
 }
 label {
@@ -206,7 +205,7 @@ button,
   letter-spacing: var(--letterSpacing);
   padding: 0.375rem 0.75rem;
   /* box-shadow: var(--shadow-1); */
-  transition: var(--transition);
+  /* transition: var(--transition); */
   text-transform: capitalize;
 }
 button:hover,
