--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wdth,YTLC@0,6..12,75..125,440..540;1,6..12,75..125,440..540&family=Sansita+Swashed:wght@900&display=swa");
+
 *,
 ::after,
 ::before {
@@ -9,20 +10,50 @@
   /* COLORS  */
 
   /* primary */
---primary-0: #fff0f0;   /* Lightest red */
---primary-50: #ffd6d6;  /* Very light red */
---primary-100: #ffbebe;  /* Soft red */
---primary-200: #ffa5a5;  /* Medium light red */
---primary-300: #ff8d8d;  /* Bright medium red */
---primary-400: #ff7474;  /* Vivid red */
+/* --primary-0: #fff0f0;  
+--primary-50: #ffd6d6;  
+--primary-200: #ffa5a5; 
+--primary-300: #ff8d8d; 
+--primary-400: #ff7474;  */
   /* main */
---primary-500: #ff5c5c;  /* Main red */
---primary-600: #d95454;  /* Slightly darker red */
---primary-700: #b34646;  /* Dark red */
---primary-800: #8c3737;  /* Deeper red */
---primary-900: #662828;  /* Very dark red */
---primary-1000: #401919; /* Near-black red */
---primary-1100: #190a0a; /* Darkest red */
+/* --primary-500: #ff5c5c;  
+--primary-600: #d95454; 
+--primary-700: #b34646;  
+--primary-800: #8c3737;  
+--primary-900: #662828;  
+--primary-1000: #401919; 
+--primary-1100: #190a0a;  */
+
+ /* COLORS  */
+  /* primary */
+  --primary-0: #f0efff;
+  --primary-50: #d8d6ff;
+  --primary-100: #c1beff;
+  --primary-200: #aaa5ff;
+  --primary-300: #938dff;
+  --primary-400: #7b74ff;
+  /* main */
+  --primary-500: #645cff;
+  --primary-600: #554ed9;
+  --primary-700: #4640b3;
+  --primary-800: #37338c;
+  --primary-900: #282566;
+  --primary-1000: #191740;
+  --primary-1100: #0a0919;
+  /* grey */
+  --grey-0: #fafbfc;
+  --grey-50: #f2f4f8;
+  --grey-100: #eaedf3;
+  --grey-200: #e2e7ef;
+  --grey-300: #dbe0ea;
+  --grey-400: #d3dae6;
+  --grey-500: #cbd3e1;
+  --grey-600: #adb3bf;
+  --grey-700: #8e949e;
+  --grey-800: #70747c;
+  --grey-900: #51545a;
+  --grey-1000: #333538;
+  --grey-1100: #141516;
 
   /* grey */
   --grey-0: #fafbfc;
