--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,36 +10,36 @@
   /* COLORS  */
 
   /* primary */
-/* --primary-0: #fff0f0;  
+--primary-0: #fff0f0;  
 --primary-50: #ffd6d6;  
 --primary-200: #ffa5a5; 
 --primary-300: #ff8d8d; 
---primary-400: #ff7474;  */
+--primary-400: #ff7474; 
   /* main */
-/* --primary-500: #ff5c5c;  
+--primary-500: #ff5c5c;  
 --primary-600: #d95454; 
 --primary-700: #b34646;  
 --primary-800: #8c3737;  
 --primary-900: #662828;  
 --primary-1000: #401919; 
---primary-1100: #190a0a;  */
+--primary-1100: #190a0a; 
 
  /* COLORS  */
   /* primary */
-  --primary-0: #f0efff;
+  /* --primary-0: #f0efff;
   --primary-50: #d8d6ff;
   --primary-100: #c1beff;
   --primary-200: #aaa5ff;
   --primary-300: #938dff;
-  --primary-400: #7b74ff;
+  --primary-400: #7b74ff; */
   /* main */
-  --primary-500: #645cff;
+  /* --primary-500: #645cff;
   --primary-600: #554ed9;
   --primary-700: #4640b3;
   --primary-800: #37338c;
   --primary-900: #282566;
   --primary-1000: #191740;
-  --primary-1100: #0a0919;
+  --primary-1100: #0a0919; */
   /* grey */
   --grey-0: #fafbfc;
   --grey-50: #f2f4f8;
