--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -95,7 +95,8 @@
   --smallText: 0.8em;
   --extraSmallText: 0.7em;
   /* rest */
-  --backgroundColor: var(--grey-0);
+  /* --backgroundColor: var(--grey-0); */
+  --backgroundColor: var(--grey-1100);
   --textColor: var(--grey-1000);
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
