--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -539,17 +539,22 @@ form>*:last-child {
 }
 
 /*#########*/
-/* Error */
+/* 404 */
 /*#########*/
 .error-page {
-  min-height: calc(100vh - (6rem + 4rem));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - (16rem + 4rem));
   text-align: center;
-  padding-top: 3rem;
+  /* padding-top: 3rem; */
 }
 
 .error-page h1 {
   font-size: 9rem;
+  margin: 0;
 }
+
 
 /*#########*/
 /* Contact */
